# XDU-AFS

./: .gitignore  README.md
AFS/src/control/: CMakeLists.txt  package.xml
AFS/src/control/launch/: test.launch
AFS/src/control/src/: control.cpp
AFS/src/trajectory_optimizer/: CMakeLists.txt  package.xml
AFS/src/trajectory_optimizer/src/: trajectory_optimizer.cpp
AFS/src/waypoint_generator/: CMakeLists.txt  package.xml
AFS/src/waypoint_generator/src/: waypoint_generator.cpp
offboard_ws/src/offboard/: CMakeLists.txt  package.xml
offboard_ws/src/offboard/src/: offboard_node.cpp
